--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ws-pkg/monorepo",
+  "name": "@ik-chatting/monorepo",
   "private": true,
   "packageManager": "pnpm@7.12.0",
   "scripts": {
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.0",
-    "@antfu/utils": "^0.7.2",
+    "@antfu/utils": "^0.7.3",
     "@types/node": "^14.14.31",
     "bumpp": "^8.2.1",
     "eslint": "^8.23.1",
@@ -24,7 +24,7 @@
     "pnpm": "^7.12.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.3",
-    "vite": "^4.3.8",
+    "vite": "^4.3.9",
     "vite-plugin-inspect": "^0.7.26",
     "vitest": "^0.31.1"
   }
