--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "ik-typing-machine",
+  "name": "@ik-chatting/core",
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@7.12.0",
   "description": "",
   "author": "Ikomom <ikonon557@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/ikomom/typing-machine#readme",
+  "homepage": "https://github.com/ikomom/ik-chatting#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ikomom/typing-machine.git",
+    "url": "git+https://github.com/ikomom/ik-chatting.git",
     "directory": "packages/core"
   },
-  "bugs": "https://github.com/ikomom/typing-machine/issues",
+  "bugs": "https://github.com/ikomom/ik-chatting/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
