--- a/playground/package.json
+++ b/playground/package.json
@@ -8,8 +8,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "socket.io-client": "^4.7.2",
-    "naive-ui": "^2.34.4"
+    "lodash-es": "^4.17.21",
+    "naive-ui": "^2.34.4",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.19",
