--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "ignorePatterns": ["example"],
   "rules": {
     "no-cond-assign": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/consistent-type-imports": 0
   }
 }
