--- a/playground/package.json
+++ b/playground/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.19",
+    "@types/lodash-es": "^4.17.8",
     "@unocss/reset": "^0.55.2",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vueuse/core": "^10.3.0",
