feat: express socket

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@antfu/utils": "^0.7.3",
     "@types/node": "^14.14.31",
     "bumpp": "^8.2.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.23.1",
     "esno": "^0.16.3",
     "pnpm": "^7.12.0",
