--- a/playground/package.json
+++ b/playground/package.json
@@ -8,19 +8,24 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
-    "socket.io-client": "^4.7.2"
+    "nprogress": "^0.2.0",
+    "socket.io-client": "^4.7.2",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.19",
     "@types/lodash-es": "^4.17.8",
     "@unocss/reset": "^0.55.2",
     "@vitejs/plugin-vue": "^4.3.1",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vueuse/core": "^10.3.0",
     "unocss": "^0.55.2",
+    "sass": "^1.66.1",
     "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.1",
-    "vue": "^3.3.4"
+    "unplugin-vue-components": "^0.25.1"
   }
 }
