--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -10,6 +10,11 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "types": [
+      "vite/client",
+      "vite-plugin-pages/client"
+    ],
+    "paths": { "@/*": ["./src/*"] },
     "lib": ["esnext", "dom"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "types/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
