--- a/playground/package.json
+++ b/playground/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --open",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -14,11 +14,13 @@
     "nprogress": "^0.2.0",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "pinia": "^2.1.6"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.19",
     "@types/lodash-es": "^4.17.8",
+    "@types/nprogress": "^0.2.0",
     "@unocss/reset": "^0.55.2",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
