feat: message format

--- a/packages/express-server/package.json
+++ b/packages/express-server/package.json
@@ -5,9 +5,9 @@
     "start": "cross-env DEBUG=* nodemon src/main.js"
   },
   "devDependencies": {
-    "nodemon": "latest",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cors": "^2.8.5"
+    "nodemon": "latest",
+    "socket.io": "^4.7.2"
   }
 }
