--- a/packages/server/docker.compose.yml
+++ b/packages/server/docker.compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   mysql:
@@ -8,7 +8,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: example
     ports:
-      - "3306:3306"
+      - '3306:3306'
 
   postgres:
     image: postgres:13.1
@@ -16,4 +16,4 @@ services:
     environment:
       POSTGRES_PASSWORD: example
     ports:
-      - "5432:5432"
+      - '5432:5432'
