--- a/playground/package.json
+++ b/playground/package.json
@@ -12,10 +12,10 @@
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
     "nprogress": "^0.2.0",
+    "pinia": "^2.1.6",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "pinia": "^2.1.6"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.19",
@@ -25,8 +25,8 @@
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vueuse/core": "^10.3.0",
-    "unocss": "^0.55.2",
     "sass": "^1.66.1",
+    "unocss": "^0.55.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1"
   }
