--- a/playground/package.json
+++ b/playground/package.json
@@ -18,15 +18,16 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.19",
+    "@iconify-json/carbon": "^1.1.21",
     "@types/lodash-es": "^4.17.8",
     "@types/nprogress": "^0.2.0",
-    "@unocss/reset": "^0.55.2",
+    "@unocss/eslint-config": "^0.56.5",
+    "@unocss/reset": "^0.56.5",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "@vueuse/core": "^10.3.0",
+    "@vueuse/core": "^10.4.1",
     "sass": "^1.66.1",
-    "unocss": "^0.55.2",
+    "unocss": "^0.56.5",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1"
   }
