--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/websockets": "^10.0.0",
+    "@nestjs/jwt": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
@@ -32,7 +35,10 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "jsonwebtoken": "^9.0.2",
+    "passport-jwt": "^4.0.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -42,6 +48,9 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/passport-jwt": "^3.0.10",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/lodash": "^4.14.199",
     "jest": "^29.5.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
