--- a/playground/package.json
+++ b/playground/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
     "nprogress": "^0.2.0",
