--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -2,5 +2,6 @@
   "extends": ["../.eslintrc", "@unocss"],
   "rules": {
     "vue/valid-attribute-name": "off"
-  }
+  },
+  "ignorePatterns": ["**.html"]
 }
