--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.5.1",
+    "@better-scroll/mouse-wheel": "^2.5.1",
+    "@better-scroll/pull-up": "^2.5.1",
+    "@better-scroll/pull-down": "^2.5.1",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
