--- a/packages/express-server/package.json
+++ b/packages/express-server/package.json
@@ -2,12 +2,14 @@
   "name": "express-server",
   "version": "1.0.0",
   "scripts": {
-    "start": "cross-env DEBUG=* nodemon src/main.js"
+    "start": "cross-env DEBUG=* npm run serve",
+    "serve": "nodemon src/main.js"
   },
-  "devDependencies": {
+  "dependencies": {
+    "duckdb": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "latest",
+    "nodemon": "^3.1.3",
     "socket.io": "^4.7.2"
   }
 }
