--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2018",
     "module": "esnext",
     "lib": ["esnext", "DOM"],
+    "noImplicitAny": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
